# ifdo-api

./: .gitignore  .tbls.yml  DATABASE.md  NOTICE  README.md  alembic.ini  make_env.sh  pyproject.toml
.github/workflows/: build_deploy.yml  create_db_docs.yml  kubernetes.yml  lint.yml
alembic/: env.py
alembic/versions/: 0085dc77c056_initial_migration.py  2025_08_05_1655-72729eaef6f3_test_update2.py  2025_08_11_1719-8a9805d936ed_initial_migration.py  2025_08_12_1522-71cfa914a0e5_add_handle_to_image.py  2025_08_12_1525-711062643a39_correct_uncertainty_meters_name.py  2025_08_12_2221-fa47b954cbea_correct_uncertainty_meters_name.py  2026_01_22_1300-698a2871c1f2_add_labels_source.py  2026_01_27_1138-3a92a886f462_initial_migration.py  2026_01_27_1437-20eccb005e45_initial_migration.py  2026_01_27_1450-deecbda256f6_initial_migration.py  2026_01_27_1636-edf8a2627a2a_initial_migration.py  2026_01_27_1708-a463af83af28_initial_migration.py  2026_02_02_1141-c63e4d316b88_your_message_here.py  2026_02_02_1207-37fd04ed36d4_update_models.py  2026_02_02_1237-96dba640cbc1_update_models.py  20b7aa808d9c_test_update.py  32e6c2f7a5c3_update_unique_values.py  6c84adfe4e46_test_update.py  c1a5c9963805_initial_migration.py  d8ab691dbb4e_initial_migration.py  e97a0e323ba7_test_update.py
deployment/: cluster-issuer.yaml
deployment/api/: Chart.yaml  values.yaml
deployment/db/: Chart.yaml  values.yaml
deployment/ifdo-api/: values.yaml
deployment/redis/: Chart.yaml  values.yaml
docker/: Dockerfile  docker-compose.yml
dockerfiles/: Dockerfile.alembic  docker-compose.yml
docs/: anomalies.html  columns.html  constraints.html  deletionOrder.txt  index.html  info-html.txt  insertionOrder.txt  orphans.html  paidiver_st3.public.xml  relationships.html  routines.html  schema.sql
docs/routines/: _postgis_deprecate_oldname_text_b19e054b.html  _postgis_index_extent_tbl_regcl_677852fe.html  _postgis_join_selectivity_regcl_677b1d95.html  _postgis_pgsql_version___1b7fc1c4.html  _postgis_scripts_pgsql_version__3430ed8d.html  _postgis_selectivity_tbl_regcla_1df313d1.html  _postgis_stats_tbl_regclass__at_81da98ca.html  _st_3ddfullywithin_geom1_geomet_69739e92.html  _st_3ddwithin_geom1_geometry__g_e6bb98b0.html  _st_3dintersects_geom1_geometry_573586f8.html  _st_asgml_integer__geometry__in_d15cba76.html  _st_asx3d_integer__geometry__in_53d2d4d4.html  _st_bestsrid_geography__4b1e9438.html  _st_bestsrid_geography__geograp_3028d932.html  _st_concavehull_param_inputgeom_69a84160.html  _st_contains_geom1_geometry__ge_7f815812.html  _st_containsproperly_geom1_geom_5def22ef.html  _st_coveredby_geog1_geography___a1cb8a62.html  _st_coveredby_geom1_geometry__g_7d9fbe82.html  _st_covers_geog1_geography__geo_da5c29ef.html  _st_covers_geom1_geometry__geom_18fcdd4f.html  _st_crosses_geom1_geometry__geo_27b36e43.html  _st_dfullywithin_geom1_geometry_569bfb81.html  _st_distancetree_geography__geo_9a42df1a.html  _st_distancetree_geography__geo_d5b9f567.html  _st_distanceuncached_geography__3e501d5d.html  _st_distanceuncached_geography__84a5dd04.html  _st_distanceuncached_geography__f9c4d3fa.html  _st_dwithin_geog1_geography__ge_d4081dbd.html  _st_dwithin_geom1_geometry__geo_969aa261.html  _st_dwithinuncached_geography___d0c26fa1.html  _st_dwithinuncached_geography___f506397d.html  _st_equals_geom1_geometry__geom_8490ed72.html  _st_expand_geography__double_pr_53cf1d39.html  _st_geomfromgml_text__integer__f9424a33.html  _st_intersects_geom1_geometry__ge_a47167.html  _st_linecrossingdirection_line1_db3424ce.html  _st_longestline_geom1_geometry__d2f70d53.html  _st_maxdistance_geom1_geometry__50c2322e.html  _st_orderingequals_geom1_geomet_eea78546.html  (+747 more)
docs/tables/: alembic_version.html  annotation_labels.html  annotation_set_creators.html  annotation_set_image_sets.html  annotation_set_labels.html  annotation_sets.html  annotations.html  annotators.html  contexts.html  creators.html  dataset_provenance_activities.html  dataset_provenance_agents.html  dataset_provenance_entities.html  (+45 more)
(+220 files in other folders)
